--- a/AirportProject/app/views/gate/index.scala.html
+++ b/AirportProject/app/views/gate/index.scala.html
@@ -11,7 +11,7 @@
 
         @for(gate <- aps){
             <a href="#">@gate.gateId</a>
-            <p>id: @gate.gateId</p>
+            <p>Terminalid: @gate.terminalId</p>
         }
 
     </body>
