--- a/AirportProject/app/views/airline/index.scala.html
+++ b/AirportProject/app/views/airline/index.scala.html
@@ -12,6 +12,7 @@
         @for(airline <- aps){
             <a href="#">@airline.airlineName</a>
             <p>id: @airline.id</p>
+            <p>AirportID: @airline.airportId</p>
         }
 
     </body>
