--- a/AirportProject/app/views/customer/index.scala.html
+++ b/AirportProject/app/views/customer/index.scala.html
@@ -12,6 +12,9 @@
         @for(customer <- aps){
             <a href="#"> @customer.cId</a>
             <p> First Name: @customer.fName  @customer.lName</p>
+            <p> Customer City: @customer.cCity</p>
+            <p>Flight Number: @customer.flightNo</p>
+            <p>CustomerID: @customer.cId</p>
         }
 
     </body>
