--- a/AirportProject/app/views/gate/index.scala.html
+++ b/AirportProject/app/views/gate/index.scala.html
@@ -11,7 +11,9 @@
 
         @for(gate <- aps){
             <a href="#">@gate.gateId</a>
-            <p>Terminalid: @gate.terminalId</p>
+            <p>Terminal ID: @gate.terminalId</p>
+            <p>AirlineID: @gate.airportId</p>
+            <p>Airport ID: @gate.airlineId</p>
         }
 
     </body>
