--- a/AirportProject/app/views/flight/create.scala.html
+++ b/AirportProject/app/views/flight/create.scala.html
@@ -1,4 +1,4 @@
-@(airlineForm : Form[Flight])
+@(flightForm : Form[Flight])
 @import helper._
 <html>
 
@@ -9,13 +9,13 @@
 
         <h1>Create an airline</h1>
         @helper.form(action = routes.FlightController.save()){
-            @helper.inputText(airlineForm("Airline ID"))
-            @helper.inputText(airlineForm("Departure Time"))
-            @helper.inputText(airlineForm("Arrival Time"))
-            @helper.inputText(airlineForm("Departure City"))
-            @helper.inputText(airlineForm("Arrival City"))
-            @helper.inputText(airlineForm("Gate ID"))
-            @helper.inputText(airlineForm("FlightID"))
+            @helper.inputText(flightForm("Airline ID"))
+            @helper.inputText(flightForm("Departure Time"))
+            @helper.inputText(flightForm("Arrival Time"))
+            @helper.inputText(flightForm("Departure City"))
+            @helper.inputText(flightForm("Arrival City"))
+            @helper.inputText(flightForm("Gate ID"))
+            @helper.inputText(flightForm("FlightID"))
             <input type ="Submit" value="Create Flight">
         }
 
