--- a/AirportProject/app/views/customer/create.scala.html
+++ b/AirportProject/app/views/customer/create.scala.html
@@ -7,9 +7,12 @@
     </head>
     <body>
 
-        <h1>Create an customer</h1>
-        @helper.form(action = routes.CustomerController.save()){
+        <h1>Create an customer</h1> 
+            @helper.form(action = routes.CustomerController.save()){
             @helper.inputText(customerForm("First Name"))
+            @helper.inputText(customerForm("Customer City"))
+            @helper.inputText(customerForm("Flight Number"))
+            @helper.inputText(customerForm("CustomerID"))
            
             <input type ="Submit" value="Create Customer">
         }
