--- a/AirportProject/app/views/flight/index.scala.html
+++ b/AirportProject/app/views/flight/index.scala.html
@@ -4,19 +4,50 @@
 
     <head>
         <title>All Flights</title>
+        <style>
+        table, th, td {
+            border: 1px solid black;
+            border-collapse: collapse;
+        }
+        th, td {
+            padding: 5px;
+            text-align: left;    
+        }
+        table#t01 tr:nth-child(even) {
+            background-color: #eee;
+        }
+        table#t01 tr:nth-child(odd) {
+            background-color:#fff;
+        }
+    </style>
     </head>
     <body>
 
         <h1>All Flights</h1>
 
-        @for(flight <- aps){
-            <a href="#">@flight.id</a>
-            <p> Airline ID: @flight.airlineId  </p>
-            <p> Departure Time: @flight.departureTime  </p>
-            <p> Arrival Time: @flight.arrivalTime  </p>
-            <p> Departure City: @flight.departureCity  </p>
-            <p> Arrival City: @flight.arrivalCity  </p>
-            <p> Gate ID: @flight.gateId  </p>        }
 
+ 
+        <table style="width:100%">
+            <tr> <b>
+                <th> Airline ID: </th>
+                <th> Departure Time: </th>
+                <th> Arrival Time: </th>
+                <th> Departure City: </th>
+                <th> Arrival City: </th>
+                <th> Gate ID: </th>
+            </b> </tr>
+        @for(flight <- aps){
+            <tr>
+                <td> <a href="#">@flight.id</a> </td>
+                <td> <p> @flight.airlineId  </p> </td>
+                <td> <p> @flight.departureTime  </p> </td>
+                <td> <p> @flight.arrivalTime  </p> </td>
+                <td> <p> @flight.departureCity  </p> </td>
+                <td> <p> @flight.arrivalCity  </p> </td>
+                <td> <p> @flight.gateId  </p> </td>       
+        </tr>
+        }
+
+        </table>
     </body>
 </html>
