fixed column header
Flight and Gate html

--- a/AirportProject/app/views/flight/index.scala.html
+++ b/AirportProject/app/views/flight/index.scala.html
@@ -29,6 +29,7 @@
  
         <table style="width:100%">
             <tr> <b>
+                <th> Flight ID: </th>
                 <th> Airline ID: </th>
                 <th> Departure Time: </th>
                 <th> Arrival Time: </th>
