--- a/AirportProject/app/views/gate/index.scala.html
+++ b/AirportProject/app/views/gate/index.scala.html
@@ -28,6 +28,7 @@
 
         <table style="width:100%">
             <tr> <b>
+                <th> Gate ID: </th>
                 <th> Terminal ID: </th>
                 <th> Airline ID: </th>
                 <th> Airport ID: </th>
