--- a/AirportProject/app/views/welcome.scala.html
+++ b/AirportProject/app/views/welcome.scala.html
@@ -46,6 +46,13 @@
                     <li><a href="http://localhost:9000/gates/create">Create Gate</a></li>
                 </ul>
             </ul>
+            <h3>Purchase</h3>
+            <ul>
+                <li><a href="http://localhost:9000/purchases">Purchase Table</a></li>
+                <ul>
+                    <li><a href="http://localhost:9000/purchases/create">Create purchases</a></li>
+                </ul>
+            </ul>
 
     </div>
 }
