--- a/AirportProject/app/views/customer/create.scala.html
+++ b/AirportProject/app/views/customer/create.scala.html
@@ -9,11 +9,11 @@
 
         <h1>Create an customer</h1> 
             @helper.form(action = routes.CustomerController.save()){
-            @helper.inputText(customerForm("CustomerID"))
-            @helper.inputText(customerForm("First Name"))
-            @helper.inputText(customerForm("Last Name"))
-            @helper.inputText(customerForm("Customer City"))
-            @helper.inputText(customerForm("Flight Number"))
+            @helper.inputText(customerForm("cId"))
+            @helper.inputText(customerForm("fName"))
+            @helper.inputText(customerForm("lName"))
+            @helper.inputText(customerForm("cCity"))
+            @helper.inputText(customerForm("flightNo"))
            
             <input type ="Submit" value="Create Customer">
         }
