--- a/AirportProject/app/views/airport/create.scala.html
+++ b/AirportProject/app/views/airport/create.scala.html
@@ -10,8 +10,8 @@
         <h1>Create an airport</h1>
             @helper.form(action = routes.AirportController.save()){
             @helper.inputText(airportForm("id"))
-            @helper.inputText(airportForm("Name"))
-            @helper.inputText(airportForm("Location"))
+            @helper.inputText(airportForm("name"))
+            @helper.inputText(airportForm("location"))
             <input type ="Submit" value="Create Airport">
         }
 
