Integrated the creation check, Got the search on the front page, found out about labels

--- a/AirportProject/app/views/welcome.scala.html
+++ b/AirportProject/app/views/welcome.scala.html
@@ -17,6 +17,7 @@
                 <ul>
                     <li><a href="http://localhost:9000/airlines/create">Create Airline</a></li>
                 </ul>
+                <li><a href="http://localhost:9000/airlines/search">Search Airline Table</a></li>
             </ul>
             <h3>Airport</h3>
             <ul>
