--- a/AirportProject/app/views/Security/Main.scala.html
+++ b/AirportProject/app/views/Security/Main.scala.html
@@ -34,7 +34,7 @@
       <div class="collapse navbar-collapse">
         <ul class="nav navbar-nav navbar-left">
           @if(isLoggedIn) {
-            <li class="@("active".when(page == "Profile"))"><a href="@routes.Application.profile()">Home</a></li>
+            <li class="@("active".when(page == "Profile"))"><a href="@routes.Application.profile()">Profile</a></li>
           }
         </ul>
         <ul class="nav navbar-nav navbar-right">
