User should now be a table in the db

--- a/AirportProject/app/views/index.scala.html
+++ b/AirportProject/app/views/index.scala.html
@@ -1,6 +1,6 @@
 @(page: String, isLoggedIn: Boolean, userInfo: UserInfo)
 
-@Main(page, isLoggedIn, userInfo) {
+@main(page, isLoggedIn, userInfo) {
 
     @*
      * Get an `Html` object by calling the built-in Play welcome
