--- a/AirportProject/app/views/welcome.scala.html
+++ b/AirportProject/app/views/welcome.scala.html
@@ -24,6 +24,7 @@
                 <ul>
                     <li><a href="http://localhost:9000/airports/create">Create Airport</a></li>
                 </ul>
+                <li><a href="http://localhost:9000/airports/search">Search Airport Table</a></li>
             </ul>
             <h3>Customer</h3>
             <ul>
@@ -31,6 +32,7 @@
                 <ul>
                     <li><a href="http://localhost:9000/customers/create">Create Customer</a></li>
                 </ul>
+                <li><a href="http://localhost:9000/customers/search">Search Customer Table</a></li>
             </ul>
             <h3>Flight</h3>
             <ul>
@@ -38,6 +40,7 @@
                 <ul>
                     <li><a href="http://localhost:9000/flights/create">Create Flight</a></li>
                 </ul>
+                <li><a href="http://localhost:9000/flights/search">Search Flight Table</a></li>
             </ul>
             <h3>Gate</h3>
             <ul>
@@ -45,6 +48,7 @@
                 <ul>
                     <li><a href="http://localhost:9000/gates/create">Create Gate</a></li>
                 </ul>
+                <li><a href="http://localhost:9000/gates/search">Search Gate Table</a></li>
             </ul>
             <h3>Purchase</h3>
             <ul>
