--- a/AirportProject/app/views/Security/Main.scala.html
+++ b/AirportProject/app/views/Security/Main.scala.html
@@ -29,7 +29,7 @@
           <!--  Display three horizontal lines when navbar collapsed. -->
           <span class="icon-bar"></span> <span class="icon-bar"></span> <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand" href="/">play-example-login</a>
+        <a class="navbar-brand" href="/">Home page</a>
       </div>
       <div class="collapse navbar-collapse">
         <ul class="nav navbar-nav navbar-left">
