--- a/AirportProject/app/views/main.scala.html
+++ b/AirportProject/app/views/main.scala.html
@@ -4,7 +4,7 @@
 
 <html>
     <head>
-        <title>@page (play-example-login)</title>
+        <title>@page (Welcome)</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="http://netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css">
         
@@ -29,7 +29,7 @@
           <!--  Display three horizontal lines when navbar collapsed. -->
           <span class="icon-bar"></span> <span class="icon-bar"></span> <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand" href="/">play-example-login</a>
+        <a class="navbar-brand" href="/">Beep</a>
       </div>
       <div class="collapse navbar-collapse">
         <ul class="nav navbar-nav navbar-left">
