--- a/AirportProject/app/views/Security/Login.scala.html
+++ b/AirportProject/app/views/Security/Login.scala.html
@@ -5,5 +5,7 @@
 @Main(page, isLoggedIn, userInfo) {
    <div class="container">
      @loginform(routes.Application.postLogin(), loginForm("email"), loginForm("password"))
+     <center><a href="http://localhost:9000/createuser">Create New User</a></center>
+            
    </div>
 }
