--- a/AirportProject/app/views/airline/Main.scala.html
+++ b/AirportProject/app/views/airline/Main.scala.html
@@ -29,12 +29,12 @@
           <!--  Display three horizontal lines when navbar collapsed. -->
           <span class="icon-bar"></span> <span class="icon-bar"></span> <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand" href="/">Should I make this disapper</a>
+        <a class="navbar-brand" href="/">Home</a>
       </div>
       <div class="collapse navbar-collapse">
         <ul class="nav navbar-nav navbar-left">
           @if(isLoggedIn) {
-            <li class="@("active".when(page == "Profile"))"><a href="@routes.Application.profile()">Home</a></li>
+            <li class="@("active".when(page == "Profile"))"><a href="@routes.Application.profile()">Index</a></li>
           }
         </ul>
         <ul class="nav navbar-nav navbar-right">
