--- a/AirportProject/app/views/purchase/index.scala.html
+++ b/AirportProject/app/views/purchase/index.scala.html
@@ -1,44 +1,11 @@
-@(ps : List[Purchase])
+@(page: String, isLoggedIn: Boolean, userInfo: UserInfo,ps : List[Purchase] )
 
-<html>
+@Main(page, isLoggedIn, userInfo) {
 
-<head>
-    <title>All Purchase</title>
-    <style>
-        table, th, td {
-            border: 1px solid black;
-            border-collapse: collapse;
-        }
-        th, td {
-            padding: 5px;
-            text-align: left;
-        }
-        table#t01 tr:nth-child(even) {
-            background-color: #eee;
-        }
-        table#t01 tr:nth-child(odd) {
-            background-color:#fff;
-        }
-    </style>
-</head>
-<body>
+@*
+* Get an `Html` object by calling the built-in Play welcome
+* template and passing a `String` message.
+*@
+@indexhtml(ps)
 
-<h1>All Purchases</h1>
-
-
-<table style="width:100%">
-    <tr> <b>
-        <th> Purchase ID: </th>
-        <th> Customer ID: </th>
-        <th> Flight ID: </th>
-    </b></tr>
-    @for(purchase <- ps){
-    <tr>
-        <td> <a href="#">@purchase.purchaseId</a> </td>
-        <td> <p> @purchase.customerId</p> </td>
-        <td> <p> @purchase.flightId</p> </td>
-    </tr>
-    }
-</table>
-</body>
-</html>
+}
