--- a/AirportProject/app/views/airport/index.scala.html
+++ b/AirportProject/app/views/airport/index.scala.html
@@ -1,48 +1,11 @@
-@(aps : List[Airport])
+@(page: String, isLoggedIn: Boolean, userInfo: UserInfo, aps : List[Airport] )
 
-<html>
+@Main(page, isLoggedIn, userInfo) {
 
-    <head>
-        <title>All Airports</title>
-        <style>
-        table, th, td {
-            border: 1px solid black;
-            border-collapse: collapse;
-        }
-        th, td {
-            padding: 5px;
-            text-align: left;    
-        }
-        table#t01 tr:nth-child(even) {
-            background-color: #eee;
-        }
-        table#t01 tr:nth-child(odd) {
-            background-color:#fff;
-        }
-    </style>
-    </head>
-    <body>
+    @*
+     * Get an `Html` object by calling the built-in Play welcome
+     * template and passing a `String` message.
+     *@
+    @indexhtml(aps)
 
-        <h1>All Airports</h1>
-
-
-
-        <table style="width:100%">
-            <tr> <b>
-                <th>  Airport ID: </th>
-                <th> Airport Name: </th>
-                <th> Airport Location: </th>
-            </b></tr>
-
-        @for(airport <- aps){
-        <tr>
-            <td> <a href="#">@airport.id</a> </td>
-            <td> <p> @airport.name</p> </td>
-            <td> <p> @airport.location</p> </td>
-        </tr>
-        }
-
-
-        </table>
-    </body>
-</html>
+}
