--- a/AirportProject/app/views/gate/index.scala.html
+++ b/AirportProject/app/views/gate/index.scala.html
@@ -1,46 +1,11 @@
-@(aps : List[Gate])
+@(page: String, isLoggedIn: Boolean, userInfo: UserInfo,ps : List[Gate] )
 
-<html>
+@Main(page, isLoggedIn, userInfo) {
 
-    <head>
-        <title>All Gates</title>
-        <style>
-        table, th, td {
-            border: 1px solid black;
-            border-collapse: collapse;
-        }
-        th, td {
-            padding: 5px;
-            text-align: left;    
-        }
-        table#t01 tr:nth-child(even) {
-            background-color: #eee;
-        }
-        table#t01 tr:nth-child(odd) {
-            background-color:#fff;
-        }
-    </style>
-    </head>
-    <body>
+@*
+* Get an `Html` object by calling the built-in Play welcome
+* template and passing a `String` message.
+*@
+@indexhtml(ps)
 
-        <h1>All Gates</h1> 
-
-
-        <table style="width:100%">
-            <tr> <b>
-                <th> Gate ID: </th>
-                <th> Terminal ID: </th>
-                <th> Airline ID: </th>
-                <th> Airport ID: </th>
-            </b></tr>
-        @for(gate <- aps){
-            <tr>
-                <td> <a href="#">@gate.gateId</a> </td>
-                <td> <p> @gate.terminalId</p> </td>
-                <td> <p> @gate.airlineId</p> </td>
-                <td> <p> @gate.airportId</p> </td>
-            </tr>
-        }
-        </table>
-    </body>
-</html>
+}
