--- a/AirportProject/app/views/gate/search.scala.html
+++ b/AirportProject/app/views/gate/search.scala.html
@@ -1,68 +1,11 @@
-@(gateForm : Form[Gate])
-@import helper._
-<html>
-<head>
-    <title>Airline Search</title>
-    <style>
-	#myInput {
-  background-position: 10px 12px;
-  background-repeat: no-repeat;
-  width: 100%;
-  font-size: 16px;
-  padding: 12px 20px 12px 40px;
-  border: 1px solid #ddd;
-  margin-bottom: 12px;
+@(page: String, isLoggedIn: Boolean, userInfo: UserInfo,GateForm : Form[Gate] )
+
+@Main(page, isLoggedIn, userInfo) {
+
+@*
+* Get an `Html` object by calling the built-in Play welcome
+* template and passing a `String` message.
+*@
+@searchhtml(GateForm)
+
 }
-
-#myUL {
-  list-style-type: none;
-  padding: 0;
-  margin: 0;
-}
-
-#myUL li a {
-  border: 1px solid #ddd;
-  margin-top: -1px; /* Prevent double borders */
-  background-color: #f6f6f6;
-  padding: 12px;
-  text-decoration: none;
-  font-size: 18px;
-  color: black;
-  display: block
-}
-
-#myUL li a:hover:not(.header) {
-  background-color: #eee;
-}
-</style>
-
-</head>
-
-
-<body>
-
-<h1>Gate Search</h1>
-
-@helper.form(action = routes.GateController.results()){
-@select(gateForm("selectField"), options(Seq("gateId","terminalId","airlineId","airportId")))
-@helper.inputText(gateForm("Search"))
-<input type ="Submit" value="Search">
-}
-<!--
-<h2><select>
-  <option value="id">Airline ID</option>
-  <option value="airline_name">Airline Name</option>
-  <option value="airport_id">Airport ID</option>
-
-</select></h2>
-@helper.form(action = routes.AirlineController.results()){
-(id) =>
-    <input type="text" id="myInput" title="Type in a name">
-
-<input type ="Submit" value="Search">
-}
--->
-
-
-</body>
-</html>
