--- a/AirportProject/app/views/gate/searchhtml.scala.html
+++ b/AirportProject/app/views/gate/searchhtml.scala.html
@@ -1,4 +1,4 @@
-@(customerForm : Form[Customer])
+@(gateForm : Form[Gate])
 @import helper._
 <html>
 <head>
@@ -41,11 +41,11 @@
 
 <body>
 
-<h1>Customer Search</h1>
+<h1>Gate Search</h1>
 
-@helper.form(action = routes.CustomerController.results()){
-@select(customerForm("selectField"), options(Seq("fName", "lName","cCity", "flightNo", "cId")))
-@helper.inputText(customerForm("Search"))
+@helper.form(action = routes.GateController.results()){
+@select(gateForm("selectField"), options(Seq("gateId","terminalId","airlineId","airportId")))
+@helper.inputText(gateForm("Search"))
 <input type ="Submit" value="Search">
 }
 <!--
